--- a/nba-trivia-game/src/components/GamePage.css
+++ b/nba-trivia-game/src/components/GamePage.css
@@ -79,13 +79,8 @@ h1 {
     color: #00008b;
     margin-left: 10px; /* Add spacing to separate from player name */
 }
-
-
-.input-container {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-}
+  
+  
 
 input {
     padding: 10px;
@@ -163,6 +158,57 @@ button:hover {
     background-color: #7f9dbf;
     cursor: not-allowed;
 }
+
+.input-container {
+    display: flex;
+    gap: 15px; /* Increase space between input and button */
+    max-width: 500px;
+    margin: 0 auto;
+    align-items: flex-start;
+  }
+  
+  .recommendation-list {
+    position: absolute;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    width: 100%;
+    top: calc(100% + 5px);
+    left: 0;
+    max-height: 150px;
+    overflow-y: auto;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    z-index: 1000;
+  }
+  
+  .recommendation-list li {
+    padding: 8px;
+    cursor: pointer;
+    color: #333;
+  }
+  
+  .recommendation-list li:hover {
+    background-color: #f0f0f0;
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+
+.win-message {
+    color: green;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 10px;
+  }
+  
 
 @media screen and (max-width: 768px) {
     .leaderboard-container {
